samples/_failures_safe/1761098157_d7fd3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fd10b4a.c: In function ‘main’:
./samples/SAFE/__tmp_2fd10b4a.c:137:9: error: ‘decomp’ undeclared (first use in this function)
  137 |     if (decomp
      |         ^~~~~~
./samples/SAFE/__tmp_2fd10b4a.c:137:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2fd10b4a.c:137:15: error: expected ‘)’ at end of input
  137 |     if (decomp
      |        ~      ^
      |               )
./samples/SAFE/__tmp_2fd10b4a.c:137:5: error: expected declaration or statement at end of input
  137 |     if (decomp
      |     ^~
